# project_hospital

./: README.md  package.xml  setup.cfg  setup.py
config/: hospital_env.yaml  hospital_layout.yaml  navigation.yaml  navigation.yaml_bak
database/: db_create.py  hospital_delivery.db
images/: anomaly.puml  er_diagram.mermaid  er_diagram.puml  functional_dependency.mermaid  functional_dependency.puml  normalization.puml
launch/: hospital_nav.launch.py
maps/: hospital_map.pgm  hospital_map.yaml
omx_pick_place/: CMakeLists.txt  package.xml
omx_pick_place/config/: box_registry.yaml
omx_pick_place/launch/: pick_place.launch.py  pose_to_joint_execute_server.launch.py  workspace_aruco_scan.launch.py
omx_pick_place/msg/: BoxDetection.msg
omx_pick_place/src/: execute_seq_node.cpp  pick_place_node.cpp  pick_place_node.cpp_bak  pose_to_joint_execute_server.cpp  workspace_aruco_scan_server.cpp
omx_pick_place/srv/: ExecuteSeq.srv  PickPlace.srv  PoseToJointExecute.srv  ScanWorkspace.srv
server/: ip_list.txt  main_server.py
server/templates/: index.html
station/: station_main.py
turtle_waffle/: log_colors.py  test_navigation.py  test_navigation_2.py  test_navigation_yaml.py  turtlebot_delivery.py
